Fixed CSS and JS filepaths.

--- a/shop.html
+++ b/shop.html
@@ -7,7 +7,7 @@
     <title>Store | Preserve Life Below Water</title>
     <link rel="icon" href="img/favicon.png">
     <link rel="stylesheet" href="css/shop.css">
-    <link rel="stylesheet" href="/preloader/splash.css">
+    <link rel="stylesheet" href="css/splash.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
@@ -203,7 +203,7 @@
     </script>
 
     <script src="js/shop.js"></script>
-    <script src="/preloader/splash.js"></script>
+    <script src="js/splash.js"></script>
 
 </body>
 
