Change checkout page. Updated the splash screen.

--- a/shop.html
+++ b/shop.html
@@ -16,6 +16,7 @@
         <h1 class="splash-header">
             <span class="splash-logo">PRESERVE THE BLUE,</span><span class="splash-logo"> PROTECT THE EARTH.</span>
         </h1>
+        <div class="loader splash-header splash-text"></div>
     </div>
 
     <div class="container">
