--- a/checkout.html
+++ b/checkout.html
@@ -5,28 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payment - Checkout </title>
+    <link rel="icon" type="image/png" href="/favicon.png">
     <link rel="stylesheet" href="css/checkout.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
+    &LeftArrow; <a href="shop.html" class="back-to-shop">Continue Shopping</a>
+    <hr>
     <h1>Checkout</h1>
-    <p></p>
     <div class="row">
-        <div class="col-75">
+        <div class="col-75 checkout">
             <div class="container">
-                <form action="shop.html" onsubmit="checkout()">
+                <form action="shop.html" method="post" onsubmit="checkout()">
                     <div class="row">
                         <div class="col-50">
                             <h3>Billing Address</h3>
-                            <label for="fname"><i class="fa fa-user"></i> Full Name</label>
-                            <input type="text" id="fname" name="firstname" placeholder="Chamod P. Karunathilake">
-                            <label for="email"><i class="fa fa-envelope"></i> Email</label>
-                            <input type="text" id="email" name="email" placeholder="chamod@iit.ac.lk">
-                            <label for="adr"><i class="fa fa-address-card-o"></i> Address</label>
-                            <input type="text" id="adr" name="address" placeholder="542 W. 15th Street">
-                            <label for="city"><i class="fa fa-institution"></i> City</label>
-                            <input type="text" id="city" name="city" placeholder="Colombo">
+                            <label for="fname"><i class="fa fa-user"></i> Full Name *</label>
+                            <input type="text" id="fname" name="firstname" placeholder="Chamod Karunathilake" autofocus="on" autocomplete="name" pattern="[A-Za-z]+" title="No numbers or special characters in the name"  required>
+                            <label for="email"><i class="fa fa-envelope"></i> Email *</label>
+                            <input type="email" id="email" name="email" placeholder="chamod@google.com" autocomplete="email" required>
+                            <label for="adr"><i class="fa fa-address-card-o"></i> Address *</label>
+                            <input type="text" id="adr" name="address" placeholder="23 A. 7th Street" autocomplete="street-address" required>
+                            <label for="city"><i class="fa fa-institution"></i> City *</label>
+                            <input type="text" id="city" name="city" placeholder="Colombo" autocomplete="address-level2" required>
 
                             <div class="row">
                                 <div class="col-50">
@@ -44,59 +46,84 @@
                             <h3>Payment</h3>
                             <label for="fname">Accepted Cards</label>
                             <div class="icon-container">
-                                <i class="fa fa-cc-visa" style="color:navy;"></i>
-                                <i class="fa fa-cc-amex" style="color:blue;"></i>
-                                <i class="fa fa-cc-mastercard" style="color:red;"></i>
-                                <i class="fa fa-cc-discover" style="color:orange;"></i>
+                                <i class="fa fa-cc-visa" style="color:navy;" title="Visa"></i>
+                                <i class="fa fa-cc-amex" style="color:blue;" title="Amex"></i>
+                                <i class="fa fa-cc-mastercard" style="color:red;" title="Mastercard"></i>
+                                <i class="fa fa-cc-discover" style="color:orange;" title="Discover"></i>
                             </div>
-                            <label for="cname">Name on Card</label>
-                            <input type="text" id="cname" name="cardname" placeholder="Chamod Karunathilake">
-                            <label for="ccnum">Credit card number</label>
-                            <input type="text" id="ccnum" name="cardnumber" placeholder="1111-2222-3333-4444">
-                            <label for="expmonth">Exp Month</label>
-                            <input type="text" id="expmonth" name="expmonth" placeholder="March">
+                            <label for="cname">Name on Card *</label>
+                            <input type="text" id="cname" name="cardname" placeholder="Chamod Karunathilake" pattern="[A-Za-z]+" title="No numbers or special characters in the name" required>
+                            <label for="ccnum">Credit card number *</label>
+                            <input type="text" id="ccnum" name="cardnumber" placeholder="1111-2222-3333-4444" required>
+                            <label for="expmonth">Exp Month *</label>
+                            <input type="text" id="expmonth" name="expmonth" placeholder="March" required>
                             <div class="row">
                                 <div class="col-50">
-                                    <label for="expyear">Exp Year</label>
-                                    <input type="text" id="expyear" name="expyear" placeholder="2024">
+                                    <label for="expyear">Exp Year *</label>
+                                    <input type="text" id="expyear" name="expyear" placeholder="2024" required>
                                 </div>
                                 <div class="col-50">
-                                    <label for="cvv">CVV</label>
-                                    <input type="text" id="cvv" name="cvv" placeholder="123">
+                                    <label for="cvv">CVV *</label>
+                                    <input type="text" id="cvv" name="cvv" placeholder="123" required>
                                 </div>
                             </div>
                         </div>
-
                     </div>
-                    <label>
-                        <input type="checkbox" checked="checked" name="sameadr"> Shipping address same as billing
-                    </label>
                     <input type="submit" value="Continue to checkout" class="btn">
                 </form>
             </div>
         </div>
-        <div class="col-25">
+        <div class="col-25 cart">
             <div class="container">
-                <h4>Cart <span class="price" style="color:black"><i class="fa fa-shopping-cart"></i> <b>0</b></span>
-                </h4>
-                <p><a href="#">Product 1</a> <span class="price">$0</span></p>
-                <p><a href="#">Product 2</a> <span class="price">$0</span></p>
-                <p><a href="#">Product 3</a> <span class="price">$0</span></p>
-                <p><a href="#">Product 4</a> <span class="price">$0</span></p>
-                <hr>
-                <p>Total <span class="price" style="color:black"><b>$0</b></span></p>
+                <h4>Cart <span class="price" style="color:#fff"><i class="fa fa-shopping-cart"></i> <b class="cart-items-num"></b></span></h4>
+                <div class="cart-container"></div>
             </div>
         </div>
     </div>
+
     <script>
         // Retrieve cart products from local storage
-        const cartProducts = JSON.parse(localStorage.getItem('cartProducts')) || [];
+        const cartProducts = JSON.parse(localStorage.getItem('cartProducts'));
+
+        // Select the container where cart items will be displayed
+        const displayCartItems = () => {
+            const cartContainer = document.querySelector('.cart-container'); 
+
+            cartProducts.forEach(product => {
+                const productElement = document.createElement('div');
+                productElement.classList.add('cart-item');
+                productElement.innerHTML = `
+                    <p>${product.title} (${product.description}) <span>&times ${product.quantity}</span><span class="price">$${(product.price * product.quantity).toFixed(2)}<span></p>
+                `;
+                cartContainer.appendChild(productElement);
+            });
+
+            // Calculate and display total price
+            
+            const totalItems = cartProducts.reduce((acc, item) => acc + item.quantity, 0);
+            const totalPrice = cartProducts.reduce((acc, item) => acc + (item.price * item.quantity), 0);
+            const totalElement = document.createElement('div');
+            totalElement.classList.add('price');
+            totalElement.innerHTML = `
+            <hr>
+            <p>Total <span class="price"><b>$${totalPrice.toFixed(2)}</b></span></p>
+            `;
+            cartContainer.appendChild(totalElement);
+
+            document.querySelector('.cart-items-num').innerHTML = `${totalItems}`;
+        };
+
+        // Call the function to display cart items
+        displayCartItems();
 
         const checkout = () => {
-            alert("Order has been placed!");
-            
-            cartProducts = [];
+            const totalItems = cartProducts.reduce((acc, item) => acc + item.quantity, 0);
+            const totalPrice = cartProducts.reduce((acc, item) => acc + (item.price * item.quantity), 0);
+            const fname = document.getElementById("fname").value; 
+            alert("Order has been placed!\n"+"Summary:\nName: "+fname+"\nTotal items: "+totalItems+"\nTotal price: "+totalPrice);
+            localStorage.removeItem('cartProducts'); // Clear cart local storage
         };
+
     </script>
 </body>
 
