--- a/shop.html
+++ b/shop.html
@@ -182,7 +182,7 @@
     <div id="overlay"></div>
 
     <footer>
-        <p>Developed by : <a href="\editor\chamod.html" target="_blank"><button title="a.k.a Batman">Chamod
+        <p>Developed by : <a href="https://github.com/Chamod07" target="_blank"><button title="a.k.a Batman">Chamod
                     Karunathilake</button></a>
         </p>
     </footer>
